@@ -1,3 +1,8 @@
+2004-07-14  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotemacs.el
+	(request): replace obsoleted code
+
 2004-07-12  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* perso/mycode.el:
